update: Adaptación de traductor a Java 8